fix detect.yaml to accept correct data type

--- a/resources/metadata/detect.yaml
+++ b/resources/metadata/detect.yaml
@@ -90,8 +90,7 @@ spec:
         aliases:
           - name: detect/dependencyPath
         type: "string"
-        default:
-          - "."
+        default: "."
         scope:
           - PARAMETERS
           - STAGES
