update pip container options

--- a/resources/metadata/whitesource.yaml
+++ b/resources/metadata/whitesource.yaml
@@ -525,3 +525,6 @@ spec:
           params:
             - name: buildTool
               value: pip
+      options:
+        - name: -u
+          value: "0"
