add access_token alias to all gh secrets

--- a/resources/metadata/fortify.yaml
+++ b/resources/metadata/fortify.yaml
@@ -56,6 +56,8 @@ spec:
           - STEPS
         type: string
         secret: true
+        aliases:
+          - name: access_token
         resourceRef:
           - name: githubTokenCredentialsId
             type: secret
