--- a/resources/metadata/sonar.yaml
+++ b/resources/metadata/sonar.yaml
@@ -199,6 +199,8 @@ spec:
         scope:
           - PARAMETERS
         secret: true
+        aliases:
+          - name: access_token
         resourceRef:
           - name: githubTokenCredentialsId
             type: secret
