Provide alias on step level bwc: transportRequestUploadFile

--- a/resources/metadata/transportRequestUploadRFC.yaml
+++ b/resources/metadata/transportRequestUploadRFC.yaml
@@ -1,5 +1,7 @@
 metadata:
   name: transportRequestUploadRFC
+  aliases:
+    - name: transportRequestUploadFile
   description: "Uploads content to a transport request"
   longDescription: |
     Uploads content to a transport request.
