--- a/resources/metadata/transportRequestUploadSOLMAN.yaml
+++ b/resources/metadata/transportRequestUploadSOLMAN.yaml
@@ -1,5 +1,7 @@
 metadata:
   name: transportRequestUploadSOLMAN
+  aliases:
+    - name: transportRequestUploadFile
   description: "Uploads content to a transport request"
   longDescription: |
     Uploads content to a transport request.
