--- a/resources/metadata/cloudFoundryDeleteService.yaml
+++ b/resources/metadata/cloudFoundryDeleteService.yaml
@@ -102,5 +102,5 @@ spec:
           - name: cloudFoundry/cfDeleteServiceKeys
   containers:
     - name: cf
-      image: ppiper/cf-cli
+      image: ppiper/cf-cli:6
       workingDir: "/home/piper"
