remove single quotes from seleniumAddress default

--- a/resources/metadata/uiVeri5ExecuteTests.yaml
+++ b/resources/metadata/uiVeri5ExecuteTests.yaml
@@ -36,7 +36,7 @@ spec:
       - name: runOptions
         type: "[]string"
         description: "Options to append to the runCommand, last parameter has to be path to conf.js (default if missing: ./conf.js)."
-        default: ["--seleniumAddress='http://localhost:4444/wd/hub'"]
+        default: ["--seleniumAddress=http://localhost:4444/wd/hub"]
         scope:
           - PARAMETERS
           - STAGES
