--- a/resources/metadata/whitesource.yaml
+++ b/resources/metadata/whitesource.yaml
@@ -116,6 +116,18 @@ spec:
           - STAGES
           - STEPS
         default: true
+      - name: customScanVersion
+        type: string
+        description: Custom version of the WhiteSource project used as source.
+        longDescription: |-
+          Defines a custom version for the WhiteSource scan which deviates from the typical versioning pattern using [`version`](#version) and [`versioningModel`](#versioningModel)
+          It allows to set non-numeric versions as well and supersedes the value of [`version`](#version) which is calculated automatically.
+          The parameter is also used by other scan steps (e.g. BlackDuck Detect) and thus allows a common custom version across scan tools.
+        scope:
+          - GENERAL
+          - PARAMETERS
+          - STAGES
+          - STEPS
       - name: cvssSeverityLimit
         type: string
         description: "Limit of tolerable CVSS v3 score upon assessment and in consequence fails the build,
@@ -228,8 +240,9 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
-      - name: productVersion
+      - name: version
         aliases:
+          - name: productVersion
           - name: whitesourceProductVersion
           - name: whitesource/productVersion
             deprecated: true
@@ -243,6 +256,9 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
+        resourceRef:
+          - name: commonPipelineEnvironment
+            param: artifactVersion
       - name: projectName
         aliases:
           - name: whitesourceProjectName
