--- a/resources/metadata/whitesource.yaml
+++ b/resources/metadata/whitesource.yaml
@@ -499,7 +499,7 @@ spec:
         - conditionRef: strings-equal
           params:
             - name: buildTool
-              value: go
+              value: golang
     - image: hseeberger/scala-sbt:8u181_2.12.8_1.2.8
       workingDir: /tmp
       env: []
