--- a/resources/metadata/cloudFoundryCreateService.yaml
+++ b/resources/metadata/cloudFoundryCreateService.yaml
@@ -196,4 +196,4 @@ spec:
           - name: cfManifestVariablesFiles
   containers:
     - name: cf
-      image: ppiper/cf-cli:v7
+      image: ppiper/cf-cli:7
