Introduce useGoStep parameter in go metadata
this parameter has no effect in go, but it is used in the groovy layer. When we
publish the documentation already based on the go layer this parameter would not
be mentioned as long as the groovy step is not purged.

This parameter has to be removed after purging the groovy layer (... when there is only the
normal stub contained in groovy).

--- a/resources/metadata/cloudFoundryDeploy.yaml
+++ b/resources/metadata/cloudFoundryDeploy.yaml
@@ -368,6 +368,14 @@ spec:
               - $(vaultPath)/cloudfoundry-$(org)-$(space)
               - $(vaultBasePath)/$(vaultPipelineName)/cloudfoundry-$(org)-$(space)
               - $(vaultBasePath)/GROUP-SECRETS/cloudfoundry-$(org)-$(space)
+      - name: useGoStep
+        type: bool
+        description: "When set to false the the groovy fallback for cloudFoundryDeploy will be used. Otherwise the corresponding go coding will be used."
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
   containers:
     - name: cfDeploy
       image: ppiper/cf-cli:6
