--- a/resources/metadata/transportRequestUploadSOLMAN.yaml
+++ b/resources/metadata/transportRequestUploadSOLMAN.yaml
@@ -4,7 +4,7 @@ metadata:
     - name: transportRequestUploadFile
   description: "Uploads content to a transport request"
   longDescription: |
-    Uploads content to a transport request.
+    Uploads content to a transport request which is associated with a change document in SAP Solution Manager
 spec:
   inputs:
     secrets:
