Improve naming for parameter handing the additional cm client options

--- a/resources/metadata/transportRequestUploadSOLMAN.yaml
+++ b/resources/metadata/transportRequestUploadSOLMAN.yaml
@@ -78,7 +78,7 @@ spec:
           - STAGES
           - STEPS
           - GENERAL
-      - name: cmclientops
+      - name: cmClientOpts
         aliases:
           - name: clientOpts
           - name: changeManagement/clientOpts
