--- a/resources/metadata/transportRequestUploadSOLMAN.yaml
+++ b/resources/metadata/transportRequestUploadSOLMAN.yaml
@@ -45,7 +45,7 @@ spec:
       - name: applicationId
         type: string
         mandatory: true
-        description: "The id of the application."
+        description: "Id of the application."
         scope:
           - PARAMETERS
           - STAGES
@@ -54,7 +54,7 @@ spec:
       - name: changeDocumentId
         type: string
         mandatory: true
-        description: "The id of the change document to upload the file. This parameter is only taken into account when provided via signature to the step."
+        description: "Id of the change document to upload the file. This parameter is only taken into account when provided via signature to the step."
         scope:
           - PARAMETERS
       - name: transportRequestId
@@ -63,7 +63,7 @@ spec:
             param: custom/transportRequestId
         type: string
         mandatory: true
-        description: "The id of the transport request to upload the file. This parameter is only taken into account when provided via signature to the step."
+        description: "Id of the transport request to upload the file. This parameter is only taken into account when provided via signature to the step."
         scope:
           - PARAMETERS
       - name: filePath
@@ -72,7 +72,7 @@ spec:
             param: mtarFilePath
         type: string
         mandatory: true
-        description: "The name/path of the file which should be uploaded"
+        description: "Name/Path of the file which should be uploaded"
         scope:
           - PARAMETERS
           - STAGES
