--- a/.github/workflows/verify-go.yml
+++ b/.github/workflows/verify-go.yml
@@ -52,7 +52,7 @@ jobs:
     - name: format
       run: go fmt ./...
     - name: verify
-      run: git diff --exit-code
+      run: git diff --name-only --exit-code
   generate:
     runs-on: ubuntu-latest
     steps:
