--- a/resources/metadata/mavenBuild.yaml
+++ b/resources/metadata/mavenBuild.yaml
@@ -74,6 +74,17 @@ spec:
         default: false
         aliases:
           - name: maven/logSuccessfulMavenTransfers
+      - name: createBOM
+        type: bool
+        description: Creates BOM using CycloneDX Maven plugin. This is set to `false` by default.
+        scope:
+          - GENERAL
+          - STEPS
+          - STAGES
+          - PARAMETERS
+        default: false
+        aliases:
+          - name: maven/createBOM
 
   containers:
     - name: mvn
