add tests stash to uiveri5 step

--- a/resources/metadata/uiVeri5ExecuteTests.yaml
+++ b/resources/metadata/uiVeri5ExecuteTests.yaml
@@ -12,6 +12,9 @@ metadata:
 #        In a Kubernetes environment, the containers both need to be referenced with `localhost`.
 spec:
   inputs:
+    resources:
+      - name: tests
+        type: stash
     params:
       - name: installCommand
         type: string
