add stash to uiveri5

--- a/resources/metadata/uiVeri5ExecuteTests.yaml
+++ b/resources/metadata/uiVeri5ExecuteTests.yaml
@@ -13,6 +13,8 @@ metadata:
 spec:
   inputs:
     resources:
+      - name: buildDescriptor
+        type: stash
       - name: tests
         type: stash
     params:
