--- a/resources/metadata/abapEnvironmentAssemblePackages.yaml
+++ b/resources/metadata/abapEnvironmentAssemblePackages.yaml
@@ -110,9 +110,18 @@ spec:
             param: abap/addonDescriptor
       - name: maxRuntimeInMinutes
         type: int
-        description: maximal runtime of the step
+        description: maximal runtime of the step in minutes
         mandatory: true
         default: 360
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+      - name: pollIntervalsInMilliseconds
+        type: int
+        description: wait time in milliseconds till next status request in the backend system
+        mandatory: true
+        default: 60000
         scope:
           - PARAMETERS
           - STAGES
