--- a/resources/metadata/uiVeri5ExecuteTests.yaml
+++ b/resources/metadata/uiVeri5ExecuteTests.yaml
@@ -12,6 +12,11 @@ metadata:
 #        In a Kubernetes environment, the containers both need to be referenced with `localhost`.
 spec:
   inputs:
+    resources:
+      - name: buildDescriptor
+        type: stash
+      - name: tests
+        type: stash
     params:
       - name: installCommand
         type: string
