--- a/resources/metadata/protecode.yaml
+++ b/resources/metadata/protecode.yaml
@@ -136,7 +136,7 @@ spec:
         default: protecode_report.pdf
       - name: fetchUrl
         type: string
-        description: The URL to fetch the file to scan with Protecode which must be accessible via public HTTP GET request
+        description: The URL to fetch the file or image to scan with Protecode. To fetch a docker image the URL needs a  'docker-registry-' prefixed. The URL must be accessible via public HTTP GET request.
         scope:
           - PARAMETERS
           - STAGES
