--- a/.github/workflows/integration-tests-pr.yaml
+++ b/.github/workflows/integration-tests-pr.yaml
@@ -9,7 +9,7 @@ jobs:
   consumer-tests:
     name: Consumer Tests
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     if: github.event.comment.body == '/it' && (github.event.comment.author_association == 'COLLABORATOR' || github.event.comment.author_association == 'OWNER' || github.event.comment.author_association == 'MEMBER')
 
     steps:
@@ -50,7 +50,7 @@ jobs:
   go-integration-tests:
     name: Go Integration Tests
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     if: (github.event.comment.body == '/it' || github.event.comment.body == '/it-go') && (github.event.comment.author_association == 'COLLABORATOR' || github.event.comment.author_association == 'OWNER' || github.event.comment.author_association == 'MEMBER')
 
     steps:
