Revert "Run CI Jobs on Ubuntu 18.04"
This reverts commit 3af11a8834f54e8bb6b3ea24e10df2cc5e078abf.

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -11,7 +11,7 @@ jobs:
 
   consumer-tests:
     name: Consumer Tests
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: checkout
@@ -42,7 +42,7 @@ jobs:
   go-integration-tests:
     name: Go Integration Tests
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: checkout
